# eQMARL-SLAM

./: .gitignore  CHANGELOG_FIXES.md  CITATION.bib  PACKAGE_MANIFEST.sha256  README.md  VALIDATION_REPORT.md  environment.yml  pyproject.toml  requirements-analysis.txt  requirements-classical.txt  requirements-quantum.txt
SLAM/: SLAM-benchmark.ipynb  __init__.py  maa2c.py  numerics.py  quantum_layers.py  run_benchmark.py  slam.py  slam_baselines.py  slam_core.py  smoke_test.py  test_vanda.pbs  train_vanda.pbs
SLAM/tests/: test_core.py  test_gym_env.py  test_models.py  test_numerics.py  test_quantum_models.py  test_repository_contract.py
